@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.13 2004/06/28 13:58:25 minskim Exp $
+$NetBSD: distinfo,v 1.14 2004/07/04 16:38:47 minskim Exp $
 
-SHA1 (mathomatic-11.2d.tgz) = 5e6a942ef54c8c633ca9429c8feba4cb2efa6da9
-Size (mathomatic-11.2d.tgz) = 125048 bytes
+SHA1 (mathomatic-11.2e.tgz) = 802afabee89d1570195c5581710fde7ad469e3d0
+Size (mathomatic-11.2e.tgz) = 125376 bytes
 SHA1 (patch-aa) = f590bd224831b7f882f7cfed72ba6db39e866985
